[gd_scene load_steps=60 format=3 uid="uid://occc148cobel"]

[ext_resource type="Script" uid="uid://bn3ev8jqegafn" path="res://character_body_2d.gd" id="1_dd465"]
[ext_resource type="Texture2D" uid="uid://dmbfm65yo1k6k" path="res://craftpix-net-679950-free-raider-sprite-sheets-pixel-art/Raider_3/Attack_1.png" id="2_lhvu3"]
[ext_resource type="Texture2D" uid="uid://ckt7mkdocmcr6" path="res://craftpix-net-679950-free-raider-sprite-sheets-pixel-art/Raider_3/Jump.png" id="3_4sjlk"]
[ext_resource type="Texture2D" uid="uid://5qb2ml5eerga" path="res://craftpix-net-679950-free-raider-sprite-sheets-pixel-art/Raider_3/Attack_2.png" id="3_qp52p"]
[ext_resource type="Texture2D" uid="uid://c1u54fiokqo47" path="res://craftpix-net-679950-free-raider-sprite-sheets-pixel-art/Raider_3/Attack_3.png" id="4_6ct3r"]
[ext_resource type="Texture2D" uid="uid://bk2eagrvfs4xq" path="res://craftpix-net-679950-free-raider-sprite-sheets-pixel-art/Raider_3/Idle.png" id="4_qp52p"]
[ext_resource type="Texture2D" uid="uid://cdc32tabqh6c8" path="res://craftpix-net-679950-free-raider-sprite-sheets-pixel-art/Raider_3/Run.png" id="5_6ct3r"]
[ext_resource type="Texture2D" uid="uid://t7o8ip3l608y" path="res://craftpix-net-679950-free-raider-sprite-sheets-pixel-art/Raider_3/Walk.png" id="6_1kp85"]
[ext_resource type="Texture2D" uid="uid://dk1c5h7w47lj0" path="res://luzSprite.webp" id="9_6ct3r"]
[ext_resource type="AudioStream" uid="uid://cdkyivhr4tfpa" path="res://clear-bright-sound-of-step-in-shoes-on-the-floor.mp3" id="10_1kp85"]

[sub_resource type="AtlasTexture" id="AtlasTexture_qnedo"]
atlas = ExtResource("2_lhvu3")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_wyqjk"]
atlas = ExtResource("2_lhvu3")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ebjds"]
atlas = ExtResource("2_lhvu3")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_k85er"]
atlas = ExtResource("2_lhvu3")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_y1dt5"]
atlas = ExtResource("2_lhvu3")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_1kp85"]
atlas = ExtResource("3_qp52p")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_uafw2"]
atlas = ExtResource("3_qp52p")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_76puf"]
atlas = ExtResource("3_qp52p")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_wd4sy"]
atlas = ExtResource("3_qp52p")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_nqd4t"]
atlas = ExtResource("3_qp52p")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_tqjdw"]
atlas = ExtResource("4_6ct3r")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_naw67"]
atlas = ExtResource("4_6ct3r")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_fhkdx"]
atlas = ExtResource("4_6ct3r")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_c4j0v"]
atlas = ExtResource("4_6ct3r")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_au0nh"]
atlas = ExtResource("3_4sjlk")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_76bt2"]
atlas = ExtResource("3_4sjlk")
region = Rect2(896, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_sxias"]
atlas = ExtResource("4_qp52p")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ucfvk"]
atlas = ExtResource("4_qp52p")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_2dyae"]
atlas = ExtResource("4_qp52p")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_2u5n8"]
atlas = ExtResource("4_qp52p")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_73nau"]
atlas = ExtResource("4_qp52p")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_skrk8"]
atlas = ExtResource("4_qp52p")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ye16i"]
atlas = ExtResource("3_4sjlk")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_75u2t"]
atlas = ExtResource("3_4sjlk")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_7qa1u"]
atlas = ExtResource("3_4sjlk")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_8gu1l"]
atlas = ExtResource("3_4sjlk")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_jsgy1"]
atlas = ExtResource("3_4sjlk")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_el80s"]
atlas = ExtResource("3_4sjlk")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_oxcm1"]
atlas = ExtResource("5_6ct3r")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ltww1"]
atlas = ExtResource("5_6ct3r")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_a7mna"]
atlas = ExtResource("5_6ct3r")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_lmwkj"]
atlas = ExtResource("5_6ct3r")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_k3r5w"]
atlas = ExtResource("5_6ct3r")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_1rslu"]
atlas = ExtResource("5_6ct3r")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_3uyxa"]
atlas = ExtResource("5_6ct3r")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_61y8d"]
atlas = ExtResource("5_6ct3r")
region = Rect2(896, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_8icv6"]
atlas = ExtResource("6_1kp85")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_mwn6v"]
atlas = ExtResource("6_1kp85")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ms8fj"]
atlas = ExtResource("6_1kp85")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_unmcv"]
atlas = ExtResource("6_1kp85")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_gh552"]
atlas = ExtResource("6_1kp85")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_mbxdm"]
atlas = ExtResource("6_1kp85")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_rk7dk"]
atlas = ExtResource("6_1kp85")
region = Rect2(768, 0, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_uafw2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qnedo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wyqjk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ebjds")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k85er")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y1dt5")
}],
"loop": true,
"name": &"attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1kp85")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uafw2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_76puf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wd4sy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nqd4t")
}],
"loop": true,
"name": &"attack2",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tqjdw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_naw67")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fhkdx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c4j0v")
}],
"loop": true,
"name": &"attack3",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_au0nh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_76bt2")
}],
"loop": true,
"name": &"fall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sxias")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ucfvk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2dyae")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2u5n8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_73nau")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_skrk8")
}],
"loop": true,
"name": &"idle",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ye16i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_75u2t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7qa1u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8gu1l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jsgy1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_el80s")
}],
"loop": true,
"name": &"jump",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_oxcm1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ltww1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a7mna")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lmwkj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k3r5w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1rslu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3uyxa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_61y8d")
}],
"loop": true,
"name": &"run",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8icv6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mwn6v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ms8fj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_unmcv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gh552")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mbxdm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rk7dk")
}],
"loop": true,
"name": &"walk",
"speed": 9.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_dd465"]
radius = 7.0
height = 42.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dd465"]
size = Vector2(32.375, 9)

[sub_resource type="Animation" id="Animation_qnedo"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"walk"]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(20),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"play_footstep_sound"
}]
}

[sub_resource type="Animation" id="Animation_1kp85"]
resource_name = "walk_step"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(8.16667),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"walk"]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"values": []
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wyqjk"]
_data = {
&"RESET": SubResource("Animation_qnedo"),
&"walk_step": SubResource("Animation_1kp85")
}

[node name="CharacterBody2D" type="CharacterBody2D" groups=["player"]]
collision_layer = 3
script = ExtResource("1_dd465")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." groups=["player"]]
texture_filter = 1
position = Vector2(3, 23)
scale = Vector2(0.648438, 0.648438)
sprite_frames = SubResource("SpriteFrames_uafw2")
animation = &"walk"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2, 44)
shape = SubResource("CapsuleShape2D_dd465")

[node name="InvulnerabilityTimer" type="Timer" parent="."]

[node name="Hitbox_Direita" type="Area2D" parent="."]

[node name="colision" type="CollisionShape2D" parent="Hitbox_Direita"]
position = Vector2(25.8125, 39)
shape = SubResource("RectangleShape2D_dd465")

[node name="AttackCooldownTimer" type="Timer" parent="."]

[node name="AttackWindupTimer" type="Timer" parent="."]

[node name="HitboxDurationTimer" type="Timer" parent="."]

[node name="Hitbox_Esquerda" type="Area2D" parent="."]

[node name="colision" type="CollisionShape2D" parent="Hitbox_Esquerda"]
position = Vector2(-21, 39)
shape = SubResource("RectangleShape2D_dd465")

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(5, 37)
energy = 0.5
texture = ExtResource("9_6ct3r")

[node name="FootstepSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_1kp85")

[node name="AnimPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_wyqjk")
}
